k8s/mongo.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: default
  name: mongodb-replica
spec:
  serviceName: pce-mongodb
  replicas: 3
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
        selector: mongo
    spec:
      terminationGracePeriodSeconds: 30
      serviceAccount: mongo-account
      containers:
      - name: mongodb
        image: docker.io/mongo:4.2
        command: ["/bin/sh"]
        args: ["-c", "mongod --replSet=rs0 --bind_ip_all"]
        resources:
          limits:
            cpu: 100m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - name: mongo-port
          containerPort: 27017
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongo-data
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: mongodb
  labels:
    app: mongo
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongo

  # cfg.members[0].host="mongodb-replica-0.pce-mongodb:27017"

  # rs.add("mongodb-replica-1.pce-mongodb:27017")

#   export DATABASE_URL="mongodb://mongodb-replica-0.mongodb.default.svc.cluster.local:27017,mongodb-replica-1.mongodb.default.svc.cluster.local:27017,mongodb-replica-2.mongodb.default.svc.cluster
# .local:27017/todo?replicaSet=rs0"
